# atria_ml

./: .gitignore  importlogs.txt  pyproject.toml
examples/trainer/image_classification/: train_cifar10.sh  train_tobacco3482.sh
examples/trainer/tobacco3482/: test_trainer.sh
scripts/: build_registry.sh
scripts/atria_examples/cifar10/: test_data_visualizer.sh  test_evaluator.sh  test_trainer.sh
src/atria_ml/: __init__.py  build_registry.py
src/atria_ml/conf/: __atria__.yaml
src/atria_ml/conf/data_pipeline/: default.yaml
src/atria_ml/conf/dataset/: cifar10.yaml
src/atria_ml/conf/dataset/huggingface_cifar10/: plain_text.yaml
src/atria_ml/conf/dataset/mnist/: mnist.yaml
src/atria_ml/conf/engine/: default_inference_engine.yaml  default_test_engine.yaml  default_training_engine.yaml  default_validation_engine.yaml  default_visualization_engine.yaml
src/atria_ml/conf/engine/feature_extractor_engine/: default.yaml
src/atria_ml/conf/lr_scheduler/: cosine_annealing_lr.yaml  cyclic_lr.yaml  exponential_lr.yaml  lambda_lr.yaml  multi_step_lr.yaml  polynomial_decay_lr.yaml  reduce_lr_on_plateau.yaml  step_lr.yaml
src/atria_ml/conf/lr_scheduler_factory/: cosine_annealing_lr.yaml  cyclic_lr.yaml  exponential_lr.yaml  lambda_lr.yaml  multi_step_lr.yaml  polynomial_decay_lr.yaml  step_lr.yaml
src/atria_ml/conf/metric_factory/: accuracy.yaml  anls.yaml  cocoeval.yaml  confusion_matrix.yaml  f1_score.yaml  layout_f1.yaml  layout_precision.yaml  layout_recall.yaml  precision.yaml  recall.yaml  seqeval_accuracy_score.yaml  seqeval_classification_report.yaml  seqeval_f1_score.yaml  seqeval_precision_score.yaml  seqeval_recall_score.yaml  sequence_anls.yaml
src/atria_ml/conf/optimizer/: adadelta.yaml  adagrad.yaml  adam.yaml  adamax.yaml  adamw.yaml  asgd.yaml  lars.yaml  lbfgs.yaml  rmsprop.yaml  rprop.yaml  sgd.yaml  sparse_adam.yaml
src/atria_ml/conf/optimizer_factory/: adamax.yaml  asgd.yaml  lars.yaml  sgd.yaml
src/atria_ml/conf/task_pipeline/: data_visualizer.yaml  evaluator.yaml
src/atria_ml/conf/task_pipeline/evaluator/: default.yaml  image_classification.yaml  layout_analysis.yaml  layout_token_classification.yaml  sequence_classification.yaml  token_classification.yaml  visual_question_answering.yaml
src/atria_ml/conf/task_pipeline/inferencer/: image_classification.yaml  layout_analysis.yaml  layout_entity_recognition.yaml  semantic_entity_recognition.yaml  sequence_classification.yaml  visual_question_answering.yaml
src/atria_ml/conf/task_pipeline/trainer/: default.yaml  image_classification.yaml  layout_analysis.yaml  layout_entity_recognition.yaml  layout_token_classification.yaml  semantic_entity_recognition.yaml  sequence_classification.yaml  token_classification.yaml  visual_question_answering.yaml
src/atria_ml/optimizers/: __init__.py  ext_modules.py  lars.py
src/atria_ml/registry/: __init__.py  module_registry.py  registry_groups.py
src/atria_ml/schedulers/: cosine_annealing_lr.py  ext_modules.py  lambda_lr.py  polynomial_decay_lr.py
src/atria_ml/task_pipelines/: __init__.py  _data_visualizer.py  _evaluator.py  _inferencer.py  _trainer.py  data_visualizer.py  distributed_trainer.py  evaluator.py  run.py  trainer.py  trainer2.py
src/atria_ml/task_pipelines/deprecated/: _data_visualizer.py  _inferencer.py  trainer_direct.py
src/atria_ml/training/configs/: early_stopping_config.py  gradient_config.py  logging_config.py  model_checkpoint.py  model_ema_config.py  warmup_config.py
src/atria_ml/training/engines/: atria_engine.py  evaluation.py  events.py  training.py  utilities.py
src/atria_ml/training/engines/engine_steps/: base.py  evaluation.py  training.py
src/atria_ml/training/handlers/: ema_handler.py  terminate_on_nan.py
src/atria_ml/training/metrics/: __init__.py
src/atria_ml/training/metrics/common/: epoch_dict_metric.py  output_gatherer.py
src/atria_ml/training/metrics/detection/: cocoeval.py  output_transforms.py  typing.py
src/atria_ml/training/metrics/instance_classification/: ext_modules.py  f1_score.py  output_transforms.py
src/atria_ml/training/metrics/layout/: f1_score.py  output_transforms.py  precision.py  recall.py
src/atria_ml/training/metrics/qa/: anls.py  output_transforms.py  sequence_anls.py
src/atria_ml/training/metrics/token_classification/: output_transforms.py  seqeval.py
src/atria_ml/training/optimizers/: ext_modules.py  lars.py
src/atria_ml/training/schedulers/: cosine_annealing_lr.py  ext_modules.py  lambda_lr.py  polynomial_decay_lr.py  typing.py
src/atria_ml/training/utilities/: checkpoints.py  common.py  constants.py  model_output_saver.py  torch_utils.py
